--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
+    "tailwindcss-cli": "^0.1.2",
     "typescript": "^5"
   }
 }
